# mediapipe

./: CMakeLists.txt  README.md  package.xml  requirements.txt
config/: config.py  config.yaml  stream_node.yaml
dataset/: Gesture To Record.md
doc/: Dataset Link  mediapipe env.yml
doc/Mediapipe/: MediaPipe Installation.md
doc/Mediapipe/Edited Files/: bash aliases command  setup.py
launch/: process_dataset_node.launch.py  recognition_node.launch.py  stream_node.launch.py
model/RightLeftPose/: model.pth  model_parameters.yaml
msg/: Frame.msg  Hand.msg  Keypoint.msg  Pose.msg
scripts/: recognition_node.py  stream_node.py  training_node.py
scripts/dataset_creator/: Utils.py  flip_all_videos.py  flip_video.py  video_register.py  zoom_all_videos.py  zoom_video.py
scripts/raw_function/: 3Ditem_register.py  3Dpoint_node_area.py  item_coordinates.csv
scripts/utils/: dataset_converter.py  mediapipe_types.py  process_dataset_node.py  utils.py  zero_padding_function.py
