<?xml version="1.0"?>
<package format="2">
  <name>mediapipe_gesture_recognition</name>
  <version>0.0.0</version>
  <description>The mediapipe_gesture_recognition package</description>

  <maintainer email="241052@studenti.unimore.it">Alberto Signoretti</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

</package>
